# imwechat

./: README.md  绘画.odt
Core/2023051604109 guochen/交易系统基本流demo/: Market.h  Painting.cpp  PaintingView.cpp  PaintingView.h  main.cpp  项目1.layout
Doc/: .~lock.绘画 (2).odt#  .~lock.绘画 需求文档.odt#  画意.docx  绘画 (2).odt  绘画 需求文档.odt
Doc/2023051604037WF/: log_wf.docx
Doc/2023051604037WF/Diagram/: Diagram.vpp  Diagram.vpp.bak_000f  Diagram.vpp.bak_001d  Diagram.vpp.bak_002d  Diagram.vpp.bak_003d  Diagram.vpp.bak_004d  Diagram.vpp.bak_005d  Diagram.vpp.bak_006d  Diagram.vpp.bak_007d  Diagram.vpp.bak_008d  Diagram.vpp.bak_009d  Diagram.vpp.bak_010d  Diagram.vpp.bak_011d  Diagram.vpp.bak_012d  Diagram.vpp.bak_013d  Diagram.vpp.bak_014d  Diagram.vpp.bak_015d
Doc/2023051604037WF/Diagram/StarUML/: Design.mdj
Doc/2023051604037WF/PostDiagram/: PostAnalyse.vpp  PostDesign.vpp  PostUseCase.vpp
Doc/2023051604037WF/PostDiagram/StarUML/: Design.mdj
Doc/2023051604037WF/code/Community/: CMakeLists.txt  Community.qml  main.cpp
Doc/2023051604037WF/code/Community/Common/: Icon.qml  ImageCrop.qml  SearchHeader.qml
Doc/2023051604037WF/code/Community/Post/: Icon.qml  Post.qml  PostItem.qml  PostList.qml  WritePost.qml  transmitpost.h
Doc/2023051604037WF/code/Community/Sidebar/: NavigationSidebar.qml  SearchSidebar.qml
Doc/2023051604037WF/code/Community/Struct/: exchange.h
Doc/2023051604037WF/code/Community/Transport/: transport.cpp  transport.h
Doc/2023051604037WF/code/Community/User/: Avatar.qml  InfoCard.qml  User.qml
Doc/2023051604037WF/code/CommunityServer/: CMakeLists.txt  server.cpp  server.h  server.ui
Doc/2023051604037WF/doc/: Diagram.vpp  community.free  diagram.mdj  usecase.mdj  ~$需求分析.docx  数据结构.docx  架构设计.docx  用例.docx  画意.docx  需求分析.docx
Doc/2023051604109 guochen/: 交易系统-健壮性分析.docx  交易系统.mdj  交易系统交互建模.docx  交易系统用况文档.docx  类图及顺序图.docx  绘画交流系统-交易系统.vpp
Doc/2023051604114 pantong/: 日志.docx  架构设计.txt  状态机.mdj  登陆系统用例.docx  绘画 需求文档.odt  通讯 - 副本.mdj  通讯.mdj  需求分析.docx
Doc/2023051604114 pantong/code/PClient/: Register.qml  UserControl.cpp  UserControl.h  global.h  main.cpp
Doc/2023051604114 pantong/code/PServe/: CMakeLists.txt  Singleton.h  UserServerControl.cpp  cserver.cpp  httpconnection.cpp  httpconnection.h  main.cpp  message.pb.cc  message.pb.h  redismgr.cpp  redismgr.h  user.cpp  user.h  userrepository.cpp  userrepository.h  verifygrpcclient.cpp  verifygrpcclient.h
Doc/2023051604114 pantong/code/VarifyServer/: CMakeLists.txt  config.js  config.json  const.js  email.js  main.cpp  package-lock.json  package.json  proto.js  redis.js  server.js  日志.txt
Doc/2023051604114 pantong/code/mychat/: 日志.txt
Doc/2023051604114 pantong/code/mychat/talk3/: CMakeLists.txt  CMakeLists.txt.user.jxctvu  Main.qml  Register.qml  TcpClient.qml  UserControl.cpp  UserControl.h  global.cpp  global.h  httpmgr.cpp  httpmgr.h  main.cpp
Doc/2023051604114 pantong/vpp/: User.vpp  用户认证类.vpp
DrawSense/: CMakeLists.txt  Community.qml  main.cpp
DrawSense/Chat/: Register.qml  TcpClient.qml  UserControl.cpp  global.h  httpmgr.cpp  httpmgr.h  singleton.h  tcpclient.cpp  tcpclient.h
DrawSense/Common/: PostHeader.qml  Suspender.qml
DrawSense/Interface/: PushInterface.qml
DrawSense/Post/: Post.qml  transmitpost.cpp
DrawSense/Sidebar/: ChatterSidebar.qml  SearchSidebar.qml
DrawSense/Transport/: transmit.cpp  transport.cpp
DrawSense/User/: Avatar.qml  InfoPage.qml  User.qml  verifyuser.cpp
DrawSense/scripts/: TextUtils.js
code/: 日志.docx
code/2023051604037wangfeng/Community/: CMakeLists.txt  Community.qml  Data.qrc  main.cpp
code/2023051604037wangfeng/Community/Common/: BackHeader.qml  Icon.qml
code/2023051604037wangfeng/Community/Post/: EditContent.qml  Header.qml  Icon.qml  PostItem.qml  PostList.qml  WritePost.qml
code/2023051604037wangfeng/Community/Sidebar/: NavigationSidebar.qml  SearchSidebar.qml
code/2023051604037wangfeng/Community/Transport/: transmit.h  transport.h
code/2023051604037wangfeng/Community/User/: InfoCard.qml  verifyuser.h
code/2023051604037wangfeng/CommunityServer/: server.cpp  server.h
code/2023051604109 guochen/交易系统基本流demo/: Market.cpp  Painting.h  TradingManager.cpp  TradingManager.h  User.cpp  User.h  项目1.dev
code/2023051604114pantong/PServe/: CMakeLists.txt  UserServerControl.h  asioioservicepool.cpp  asioioservicepool.h  const.h  cserver.h  tcpchatsession.cpp  tcpchatsession.h  user.cpp  userrepository.cpp
code/2023051604114pantong/mychat/talk3/: Logdialog.qml  main.cpp  singleton.h  tcpclient.h
